Updated landing page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="page-cont" [ngClass]="{'bg-img': !isLoggedIn()}">
+<div class="page-cont">
   <div *ngIf="isLoggedIn()">
-    <div class="header shadow-sm">
+    <div class="header shadow">
       <div class="content">
         <div class="home-data">
           <a routerLink="/"  style="font-weight: bold; color: #000; font-size: 20px; padding: 10px 0; display: inline-block;">
