--- a/src/app/components/misc/app-title/app-title.component.html
+++ b/src/app/components/misc/app-title/app-title.component.html
@@ -1,3 +1,6 @@
 <div class="cont">
-  <img src="/assets/logo.png" />
+  <h2>
+    <span class="align-middle">Vinteres</span>
+    <span class="align-middle badge badge-pill badge-primary">Beta</span>
+  </h2>
 </div>
