--- a/src/app/components/misc/app-title/app-title.component.sass
+++ b/src/app/components/misc/app-title/app-title.component.sass
@@ -1,7 +1,16 @@
 .cont
   margin-bottom: 60px
 
-  img
-    margin: auto
-    display: block
-    height: 50px
+  h2
+    text-align: center
+
+  h2
+    span:first-child
+      font-size: 35px
+      font-weight: bold
+      margin-right: 5px
+
+  h2
+    span:nth-child(2)
+      font-size: 12px
+      background-color: purple
