--- a/src/app/components/misc/app-info/app-info.component.html
+++ b/src/app/components/misc/app-info/app-info.component.html
@@ -2,9 +2,9 @@
   {{ 'Find and match with people by personality and interests.' | translate }}
 </h1>
 <p>
-  {{ 'Vinteres is a dating website with the main goal to match people by personality and interests.' | translate }}
+  {{ 'Vinteres is a dating website with the main goal to match people by personality and interests. For building serious relationships.' | translate }}
   <br/><br/>
-  {{ 'Because compatability matters. Automatically show people with high compatability percentage to you.' | translate }}
+  {{ 'Automatically show people with high compatability percentage to you.' | translate }}
   <br/><br/>
   {{ 'Completely free.' | translate }}
 </p>
