Added image upload on onboarding

--- a/src/app/components/pages/chat/messages-page/messages-page.component.html
+++ b/src/app/components/pages/chat/messages-page/messages-page.component.html
@@ -4,6 +4,10 @@
       <div style="height: 100%; overflow-y: auto;">
         <loader *ngIf="loading"></loader>
 
+        <div style="padding: 5px 10px; font-weight: bold; font-size: 18px; border-bottom: 1px solid #b0b0b0;">
+          {{ 'Messages' | translate }}
+        </div>
+
         <div *ngIf="!loading && 0 === users.length" style="padding: 10px; font-weight: bold;">
           {{ 'No matches yet.' | translate }}
         </div>
