--- a/src/app/components/pages/user-page/user-page.component.sass
+++ b/src/app/components/pages/user-page/user-page.component.sass
@@ -145,6 +145,11 @@ pre
   font-family: "BalsamiqSans", "arial", sans-serif
   margin: 5px
 
+.verification-status-text
+  color: #4798b5
+  font-weight: initial
+  font-size: 15px
+
 @media only screen and (max-width: 990px)
   .add-image-item
     width: 100%
