--- a/src/app/components/pages/chat/user-chat/user-chat.component.sass
+++ b/src/app/components/pages/chat/user-chat/user-chat.component.sass
@@ -1,6 +1,8 @@
 .message-item
   padding: 3px 10px
   border-radius: 5px
+  white-space: pre-wrap
+  font-size: .9rem
   max-width: 70%
   display: inline-block
 
