--- a/src/app/components/pages/onboarding-page/onboarding-page.component.html
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.html
@@ -7,7 +7,7 @@
     {{ 'There are 5 steps and the progress is saved till your current step. You can return and continue any time.' | translate }}
   </div>
   <div class="info-button-cont">
-    <button class="btn btn-primary" (click)="showIntroText = false">{{ 'Start' | translate }}</button>
+    <button class="btn btn-outline-dark" (click)="showIntroText = false">{{ 'Start' | translate }}</button>
   </div>
 </div>
 
@@ -60,10 +60,11 @@
       <div class="form-group row">
         <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'Birthday' | translate }}</label>
         <div class="col-sm-10">
-          <date-picker [date]="birthday.value" (dateChange)="dateChange($event)"></date-picker>
+          <date-picker [date]="birthday.value" (dateChange)="dateChange($event)" (changed)="birthday.markAsDirty()"></date-picker>
           <div>
-            <small *ngIf="gender.invalid && (gender.dirty || gender.touched)" class="text-danger">
-              {{ 'Required field' | translate }}
+            <small *ngIf="birthday.invalid && (birthday.dirty || birthday.touched)" class="text-danger">
+              <span *ngIf="birthday.errors.underage">{{ birthday.errors.underage | translate }}</span>
+              <span *ngIf="!birthday.errors.underage">{{ 'Required field' | translate }}</span>
             </small>
           </div>
         </div>
@@ -114,7 +115,7 @@
       </div>
     </form>
     <div class="btn-cont">
-      <button class="btn btn-primary" (click)="saveAccountInfo()" [disabled]="loading">{{ 'Save' | translate }}</button>
+      <button class="btn btn-outline-dark" (click)="saveAccountInfo()" [disabled]="loading">{{ 'Save' | translate }}</button>
       <div class="clearfix"></div>
     </div>
   </div>
@@ -239,7 +240,7 @@
     </form>
 
     <div class="btn-cont">
-      <button class="btn btn-primary" (click)="saveProfileInfo()">{{ 'Save' | translate}}</button>
+      <button class="btn btn-outline-dark" (click)="saveProfileInfo()">{{ 'Save' | translate}}</button>
       <div class="clearfix"></div>
     </div>
   </div>
@@ -264,7 +265,7 @@
     </div>
 
     <div class="btn-cont">
-      <button class="btn btn-primary" (click)="saveInterests()" [disabled]="loading">{{ 'Save' | translate }}</button>
+      <button class="btn btn-outline-dark" (click)="saveInterests()" [disabled]="loading">{{ 'Save' | translate }}</button>
       <div class="clearfix"></div>
     </div>
   </div>
@@ -280,7 +281,7 @@
       {{ 'To find a better match try to answer honestly.' | translate }}
     </div>
     <div class="info-button-cont">
-      <button class="btn btn-primary" (click)="showQuizIntroText = false">{{ 'Start Quiz' | translate}}</button>
+      <button class="btn btn-outline-dark" (click)="showQuizIntroText = false">{{ 'Start Quiz' | translate}}</button>
     </div>
   </div>
 
@@ -317,7 +318,7 @@
       </div>
     </form>
 
-    <button class="btn btn-primary" (click)="saveQuiz()">{{ 'Next' | translate }}</button>
+    <button class="btn btn-outline-dark" (click)="saveQuiz()">{{ 'Next' | translate }}</button>
   </div>
 </div>
 
@@ -336,7 +337,7 @@
   </div>
 
   <div style="text-align: center; margin-top: 35px;">
-    <button class="btn btn-outline-primary" (click)="newImage.click()" [disabled]="uploadingImage">{{ 'Upload' | translate }}</button>
+    <button class="btn btn-outline-outline-dark" (click)="newImage.click()" [disabled]="uploadingImage">{{ 'Upload' | translate }}</button>
   </div>
 
   <input type="file" accept="image/*" (change)="uploadImage($event.target.files)" style="display: none;" #newImage>
